# python_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/python_project/: 109_165-9.csv  __init__.py  responsive_menu_layout.py  your_csv_data.csv  your_json_data.json
src/python_project_django/: requirements.txt  settings.py
src/python_project_flet/: 10909.json
src/python_project_shared_bikes/: Python課程數據分析報告SharedBikes.ipynb  python課程數據分析報告sharedbikes.py
