[project]
name = "python_project"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "flet>=0.10.3",
    "pyinstaller>=4.5.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.3",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "simpledatatable>=0.3.4",
    "Django>=4.2.7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "python3 src/python_project/__init__.py"
